5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1822_1644.log
== TEST (2019-06-13 10:10:15) 
-- CODE:
from numpy import*
vet= array(eval(input("notas:")))
soma=0
for x in vet:
	x=y>5
	soma=soma+1
	print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:00) 
-- CODE:
from numpy import*
vet= array(eval(input("notas:")))
soma=0
for x in vet:
	reprovados= x>5
	soma=soma+1
	print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:42) 
-- CODE:
from numpy import*
vet= array(eval(input("notas:")))
soma=0
for x in vet:
	reprovados= x>5
	soma=soma+1
	print(reprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:12:05) 
-- CODE:
from numpy import*
vet= array(eval(input("notas:")))
soma=0
for x in vet:
	reprovados= x>5
	soma=soma+1
	print(reprovados)
-- EXECUTION TIME:
0.728985
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
False
True
False
True
True
True
False
True
False
True
False
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
True
False
False
False
True
False
False
True
False
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
False
False
False
True
False
True
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:46) 
-- CODE:
from numpy import*
vet= array(eval(input("notas:")))
 print(vet<5)
		
-- ERROR:
File "XXXX", line 3
    print(vet<5)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:40:51) 
-- CODE:
from numpy import*
vet= array(eval(input("notas:")))
 print(vet<5)
		
-- EXECUTION TIME:
0.725459
-- ERROR:
  File "/home/codebench/codes/1822/1644/main.py", line 3
    print(vet<5)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
